Trying to add a shell step to process

--- a/Process-as-Code-Example/Process-as-Code-YAML/deploy.yaml
+++ b/Process-as-Code-Example/Process-as-Code-YAML/deploy.yaml
@@ -31,5 +31,19 @@ process:
       label: ""
     "on":
       success:
-        finish: ""
+        start: "Deploy Application"
 
+  Deploy Application:
+    type: "plugin"
+    plugin: "Shell"
+    command: "Shell"
+    properties:
+      directoryOffset: "."
+      shellInterpreter: ""
+      runAsDaemon: "false"
+      outputFile: ""
+      tempDirectory: "${p?:agent\/temporaryDirectory}"
+      scriptBody: "echo hello world"
+    "on":
+      success:
+        finish: ""
